# aq-work-trial

./: .gitignore  CHANGELOG.md  README.md  dashboard.py
examples/fix-maven-artifact-dependencies/: CMakeLists.txt  Dockerfile  _bugs.md  agent_fix.sh  applypatch  applypatch.sh  run-tests.sh  solution.sh  task.yaml
examples/fix-maven-artifact-dependencies/app/: CMakeLists.txt
examples/fix-maven-artifact-dependencies/app/src/: main.cpp
examples/fix-maven-artifact-dependencies/libs/libcalc/: CMakeLists.txt
examples/fix-maven-artifact-dependencies/libs/libcalc/include/: calc.hpp
examples/fix-maven-artifact-dependencies/libs/libcalc/src/: calc.cpp
examples/fix-maven-artifact-dependencies/libs/libmath/: CMakeLists.txt
examples/fix-maven-artifact-dependencies/libs/libmath/include/: math.hpp
examples/fix-maven-artifact-dependencies/tests/: test_outputs.py
generator/: analyze.py  batch.py  batch_io.py  config.py  diversity.py  evaluate.py  generate.py  metrics.py  pipeline.py  prompts.py  quality.py  requirements.txt  test_surgical_eval.py  tune_weights.py
output/: dashboard.html  pipeline-metrics.json
scripts/: docker-validate.sh  generate-exemplar.sh  generate.sh  promote-exemplar.sh  validate.sh
terminal_bench/: README.md  pyproject.toml
tests/: conftest.py  test_analyze.py  test_batch.py  test_batch_resume.py  test_config.py  test_dashboard.py  test_diversity.py  test_docker_validate.py  test_evaluate.py  test_generate.py  test_harness.py  test_metrics.py  test_pipeline_e2e.py  test_prompts.py  test_quality.py  test_validate.py
(+373 files in other folders)
